[package]
name = "mqb"
version = "0.2.0"
description = "Lock free in memory message queue broker"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LazyMechanic/mqb"
documentation = "https://docs.rs/mqb"
keywords = ["queue", "mpmc", "broker", "channel", "chan"]
categories = ["asynchronous", "concurrency"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"
rust-version = "1.74"

[dependencies]
crossbeam = "0.8"
scc = { version = "2.3", features = ["equivalent"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
futures = "0.3.31"
num_cpus = "1.16.0"
rand = "0.9.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-test = "0.4.4"

[[bench]]
name = "bench"
harness = false
