[package]
name = "mqb"
version = "0.2.0"
description = "Lock free in memory message queue broker"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LazyMechanic/mqb"
documentation = "https://docs.rs/mqb"
keywords = ["queue", "mpmc", "broker", "channel", "chan"]
categories = ["asynchronous", "concurrency"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"
rust-version = "1.74"

[dependencies]
crossbeam = "0.8"
event-listener = "5.4"
event-listener-strategy = "0.5"
futures = "0.3"
pin-project = "1.1"
scc = { version = "3.1", features = ["equivalent"] }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
easy-parallel = "3.3.1"
futures-test = "0.3.31"
num_cpus = "1.16.0"
rand = "0.9.0"
tokio = { version = "1.39.2", features = ["full"] }

[[bench]]
name = "bench"
harness = false
